rest report