@@ -1,14 +1,19 @@
 plugins {
     id ("application")
+    id("com.google.cloud.tools.jib") version "3.3.0"
 }
+
+jib{
+    to.image="ivanantipin/fireprod:$version"
+
+    container{
+        mainClass = "com.firelib.techbot.MainKt"
+        jvmFlags = listOf("-Xms128m", "-Xmx1024m", "-Xlog:gc*:/ddisk/globaldatabase/gc.log:time")
+    }
+}
+
 
 dependencies {
     implementation (project(":back"))
     implementation (project(":transaqgate"))
 }
-
-//application {
-//    mainClassName = "com.firelib.prod.RunRunKt"
-//    //"-Dcom.sun.management.jmxremote.port=9999", "-Dcom.sun.management.jmxremote.authenticate=false", "-Dcom.sun.management.jmxremote.ssl=false"
-//    applicationDefaultJvmArgs = ["-Xms128m", "-Xmx1024m"]
-//}
